WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280739
[WebGPU]
284345@main
results in pipeline overrides failing to be computed in some sites
https://bugs.webkit.org/show_bug.cgi?id=280739
Summary
[WebGPU] 284345@main results in pipeline overrides failing to be computed in ...
Mike Wyrzykowski
Reported
2024-10-01 22:36:27 PDT
[WebGPU]
284345@main
results in pipeline overrides failing to be computed in some sites, e.g.,
https://webgpu.github.io/webgpu-samples/?sample=gameOfLife
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-01 22:36:42 PDT
<
rdar://problem/137104174
>
Tadeu Zagallo
Comment 2
2024-10-02 11:04:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34581
EWS
Comment 3
2024-10-03 01:49:08 PDT
Committed
284606@main
(3e2281f1f134): <
https://commits.webkit.org/284606@main
> Reviewed commits have been landed. Closing PR #34581 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug